--- a/fitness/template.html
+++ b/fitness/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website was created by:  Jackie Swanson-->
+<!-- This website was created by:  Jackie Swanson ism 5994-->
 <html lang="en">
    <head>
        <title>Forward Fitness Club</title>
