Added name and course number

--- a/fitness/index.html
+++ b/fitness/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website was created by:  Jackie Swanson-->
+<!-- This website was created by:  Jackie Swanson ISM 5994-->
 <html lang="en">
    <head>
        <title>Forward Fitness Club</title>
