--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website was created by:  Jackie Swanson ISM 5994-->
+<!-- This website was created by:  Jackie Swanson ism 5994-->
 <html lang="en">
    <head>
        <title>Forward Fitness Club</title>
@@ -25,12 +25,16 @@
         </nav>
 
         <!-- Use the main area to add the main content of the webpage -->
-        <main></main>
-            <div id="intro">
-            <p>Welcome to Forward Fitness Club.  Our mission is to help our clients meet their fitness and nutrition goals.</p>
-            <p>If you have struggled with getting healthy and need motivation and resources to make a healthy lifestyle change.  Our facility includes state-of-the-art equipment, convenient group training classes, nutrition tips and information</p>
-            <p>We provide a FREE, one-week membership to experience the benefits of our equipment and facility.  This one-week trial give you complete access to our equipment, training classes, and nutrition planning.  Contact us today to start your free trial!</p>
+        <main>
+            <div id="contact"> 
+                <h2>Ready to get started?  Contact us today</h2>
+                <h4>Call us:  (814) 555-9608</h4>
+                <h4>Email us: <a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></h4>
+                <h4>Visit us at: 1275 Channel Center Street, Boston, MA 02210</h4>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.8517572085134!2d-71.05362748475294!3d42.34568384400231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a7dc2b67e7b%3A0x36ec93427cd9c5f1!2sChannel%20Center%20St%2C%20Boston%2C%20MA%2002210!5e0!3m2!1sen!2sus!4v1612062357170!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
+        </main>
+
         <!-- Use the footer area to add webpage footer content -->
         <footer>
             <p>&copy; Copyright 2011.  All Rights Reserved.</p>
